--- a/assets/css/joinus.css
+++ b/assets/css/joinus.css
@@ -1,5 +1,10 @@
+li {
+    line-height: 1.4em;
+}
+
 .upper-part {
-    height: 774px;
+    /*height: 774px;*/
+    padding-bottom: 152px;
     background-color: #37474f;
 }
 
@@ -12,10 +17,12 @@
     font-size: 48px;
     font-weight: bold;
     color: #ffffff;
+    line-height: 1em;
 }
 
 .mdl-cell--5-col img {
     margin-top: 74px;
+    width: 100%;
 }
 
 .upper-content {
